# stella-hvs

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  design-lock.json  env.example  environment.yml  pyproject.toml
benchmark/: GUIDELINE.md  README.md
docs/: DESIGN.md  agent-workflows.md  benchmark-master-plan.md  benchmark-task-checklist.md  human-workflows.md  known-issues-legacy-extractions.md  outputs.md  refactor-rename-map.md  schema-v0.2-notes.md  setup.md  title-triage.md  usage.md  vision.md  workflows.md
notes/: 2025-01.md  2025-02.md  2025-03.md  2025-04.md  2025-05.md  2025-06.md  2025-07.md  2025-08.md  2025-09.md  2025-10.md  2025-11.md  2025-12.md  2026-01.md  2026-02.md  2026-03.md  2026-04.md  index.json  index.md
scripts/: annotate_catalog_data.py  apply_agent_catalog_adjudication.py  benchmark_align_candidates.py  benchmark_collect_variants.py  benchmark_finalize_gold.py  benchmark_score.py  benchmark_select_sample.py  build_benchmark_manifest.py  build_benchmark_review.py  build_catalog_index.py  build_hvs_candidates_index.py  build_hvs_catalog_html.py  build_hvs_catalog_web.py  build_review_workbench.py  calculate_hvs_dynamics.py  check_llm_endpoint.py  cleanup_catalog_workflow_outputs.py  env.example  extract_catalog_tables.py  fetch_high_velocity_lit.py  fetch_literature.py  generate_schema_docs.py  init_catalog_ingestion.py  init_catalog_review.py  init_hvs_candidates.py  inventory_catalog_candidates.py  match_candidate_identities.py  merge_hvs_candidate_catalog.py  migrate_data_to_v0_1.py  (+17 more)
(+1550 files in other folders)
